# libvnn

./: CMakeLists.txt  LICENSE  README.md  vnn.pc.in
cmake/: FindGObject.cmake
examples/: CMakeLists.txt  discoverer.cc  file_desktop.cc  file_desktop_async.cc  file_tx2.cc  my_example.cc  my_example_tx2.cc  stream.sh  webcam.cc
examples/TX2/c/: TX2_video_scale_appsink.cpp  test2.cpp  tx2_camera_scale_appsink.c  tx2_camera_scale_appsink.cpp
examples/dede_integration/: predict.py
examples/desktop/c/: desktop_v4l2src_appsink.c
src/: CMakeLists.txt  inputconnectorcamera.cc  inputconnectorcamera.h  inputconnectorcameratx2.cc  inputconnectorcameratx2.h  inputconnectorfile.cc  inputconnectorfile.h  inputconnectorfiletx2.cc  inputconnectorfiletx2.h  inputconnectorstrategy.h  outputconnectordummy.cc  outputconnectordummy.h  outputconnectorstrategy.h  streamlib.h  streamlibgstreamerdesktop.cc  streamlibgstreamerdesktop.h  streamlibgstreamertx2.cc  streamlibgstreamertx2.h  vnninputconnectorcamera.cc  vnninputconnectorcamera.h  vnninputconnectorcameratx2.cc  vnninputconnectorcameratx2.h  vnninputconnectorfile.cc  vnninputconnectorfile.h  vnninputconnectorfiletx2.cc  vnninputconnectorfiletx2.h  vnninputconnectorstrategy.h  vnnoutputconnectordummy.cc  vnnoutputconnectordummy.h  vnnoutputconnectorstrategy.h  vnnvideostream.h
